tooling/nargo_cli/tests/snapshots/execution_success/lambda_taking_lambda_with_variant/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[lambda_taking_lambda_with_variant] Circuit output: 0
